--- a/Curriculo/style.css
+++ b/Curriculo/style.css
@@ -1,15 +1,12 @@
-h1 {
-    background-color: rgb(210, 192, 228);
-}
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 30px;
-    background-color: #f4f4f4;
+    background-color: #91fac9;
   }
   
   form {
-    background: white;
+    background: #a5a5a5;
     padding: 20px;
     border-radius: 8px;
     max-width: 600px;
