--- a/Curriculo/style.css
+++ b/Curriculo/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 30px;
-    background-color: #91fac9;
+    background-color: #cecece;
   }
   
   form {
